@@ -1,1 +1,1 @@
-/home/ramana/virtualenvs/pysis/lib/python2.6/site-packages/grappelli/media/
+/home/ramana/virtualenvs/pysis/src/django-grappelli/grappelli/media/
